Modified dirty bit signal (added bit value) Added dirty bit signal to user-menu

--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -100,7 +100,7 @@
 
 	 	<iron-signals on-iron-signal-backtest-updated='onBacktestUpdated'></iron-signals>
 
-	 	<iron-signals on-iron-signal-set-dirtybit='onSetDirtyBit'></iron-signals>
+	 	<iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
 
 
 		<template is='dom-if' if='{{isActive(active, subroute)}}'>
@@ -354,8 +354,8 @@
 	        	this.dirtyBit = 1;
 	        },
 
-	        onSetDirtyBit: function() {
-	        	this.dirtyBit = 1;
+	        onSetDirtyBit: function(e) {
+	        	this.dirtyBit = e.detail;
 	        },
 
     	});
