--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -138,7 +138,7 @@
 
         <iron-signals on-iron-signal-post-added='onPostAdded'></iron-signals>
 
-        <iron-signals on-iron-signal-set-dirtybit='onSetDirtyBit'></iron-signals>
+        <iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
 
 
         <template is='dom-if' if='{{isActive(active, subroute)}}'>
@@ -446,8 +446,8 @@
               this.dirtyBit = 1;
             },
 
-            onSetDirtyBit: function() {
-              this.dirtyBit = 1;
+            onSetDirtyBit: function(e) {
+              this.dirtyBit = e.detail;
             },
 
         });
